<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".acivity.BackupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Backup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navig_header_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background"
            android:padding="5dp"
            android:text="@string/txt_showinstruc"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/background">

            <TextView
                android:id="@+id/texxtView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/txt_maininstruc"
                android:textSize="16sp" />

            <Button
                android:id="@+id/Backup_save_backupfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texxtView"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background"
                android:padding="5dp"
                android:text="@string/txt_savefilebackup"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Backup_load_notefile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Backup_save_backupfile"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/background"
                android:padding="5dp"
                android:text="@string/txt_loadnode"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>